<resources>
    <string name="app_name">Prodex</string>
    <string name="prodex">PRODEX</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="board1">Choose a product from your store that you would like people to see.</string>
    <string name="board2">Use a template from our many ones and create wonders.</string>
    <string name="board3">Share your video on our website and social media and let more people know about it.</string>
    <string name="title1">Select a product</string>
    <string name="title2">Edit your video</string>
    <string name="title3">Share it</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="skip"><u>Skip</u></string>
    <string name="template_description">Choose the templates that you think fits the best with your product.</string>
    <string name="add_text">Add Text?</string>
    <string name="add_voice">Add PRODEX Voice?</string>
    <string name="enter_text_here">Enter text here…</string>
    <string name="generate_text">Enter text here to generate voice over using Prodex Voice</string>
    <string name="enter_first_text_here">Enter first text here…</string>
    <string name="second_text">Second text…</string>
    <string name="third_text">Third text…</string>
    <string name="text_description">Adding text will help your viewers to know more about what your product is.</string>
    <string name="voice_description">You can choose whether to have someone reads your text, record it yourself, or even add music!</string>
    <string name="prodex_voice">PRODEX voice</string>
    <string name="add_music_from_library"><u>Add music from library</u></string>
    <string name="record">Add Record</string>
    <string name="start_recording">Start Recording.</string>
    <string name="just_a_couple_of_steps">Just a couple of steps…!</string>
    <string name="dealer_description">We will need some information, so we can let more people reach you faster.</string>
    <string name="product_desc">After we got to know you, now it’s time to know more about your product.</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter your email</string>
    <string name="country">Country:</string>
    <string name="enter_country">Enter your country</string>
    <string name="about_your_product">About your product…</string>
    <string name="product_category">Product category:</string>
    <string name="category">Category</string>
    <string name="select_from_here">Select from here</string>
    <string name="subcategory">Subcategory</string>
    <string name="describe_you_product">Describe you product:</string>
    <string name="description">Description…</string>
    <string name="describe_description">This will be shown under your post on our website.</string>
    <string name="additional_description">This will be alongside with our social media promotion.</string>
    <string name="product_name">Product name:</string>
    <string name="enter_product_name">Enter your product name</string>
    <string name="product_link">Product link:</string>
    <string name="enter_product_link">Enter your product link</string>
    <string name="reach">How to reach you?</string>
    <string name="enter_reach">Enter your Phone number or Email</string>
    <string name="additional">Additional text:</string>
    <string name="enter_text">Enter your text</string>
    <string name="here_s_the_final_prodex">Here’s the final PRODEX!</string>
    <string name="post">Post</string>
    <string name="find_the_best_lego">Find the best Lego sets, available now at The Lego Shop!</string>
    <string name="only_one_step_left">Only one step left!</string>
    <string name="payment_description">you can always choose to pay extra amount for higher promotion!</string>
    <string-array name="target_age">
        <item>12-17</item>
        <item>18-24</item>
        <item>25-34</item>
        <item>35-44</item>
        <item>44 and older</item>
    </string-array>
    <string name="target_place">Target place:</string>
    <string name="pay_with">Pay with</string>
    <string name="total">Total:</string>
    <string name="older">44 and older</string>
    <string name="time_to_glow_up">Time to Glow Up</string>
    <string name="get_ready">Get ready, they’re coming for you!</string>
    <string name="one_moment">One moment…</string>
    <string name="snackbar">There are some information missing!</string>
    <string name="fashion">Fashion</string>
    <string name="cooking">Cooking</string>
    <string name="cars">Cars</string>
    <string name="electronics">Electronics</string>
    <string name="home_and_living">Home and Living</string>
    <string name="beauty_and_personal_care">Beauty and Personal Care</string>
    <string name="sports_and_fitness">Sports and Fitness</string>
    <string name="books_and_stationery">Books and Stationery</string>
    <string name="health_and_wellness">Health and Wellness</string>
    <string name="toys_and_games">Toys and Games</string>
    <string name="or_skip_some_steps_and_add_a_video_without_edits"><u>Or skip some steps and add a video without edits</u></string>
    <string name="text_for_first_10_seconds">Add text for the first 10 sec…</string>
    <string name="text_for_10_to_20_seconds">Next 20 sec…</string>
    <string name="text_for_20_to_30_seconds">Last 30 sec…</string>
    <string name="add_voice_from_gallery"><u>Add voice from gallery</u></string>
    <string name="select_photos">Select photos</string>
    <string name="permission_image">There is no Permission to get images</string>
    <string name="save_my_info">Save my info</string>
    <string name="or">Or</string>
    <string name="something_went_wrong_updating">Something went wrong while updating.</string>
    <string name="notification_permission">You must activate notifications to send you some notifications only when necessary</string>
    <string name="enable_important_notifications">Enable important notifications</string>
    <string name="notifications_enabled">Notifications are enabled</string>
    <string-array name="product_types">
        <item>Fashion</item>
        <item>Cooking</item>
        <item>Cars</item>
        <item>Electronics</item>
        <item>Home and Living</item>
        <item>Beauty and Personal Care</item>
        <item>Sports and Fitness</item>
        <item>Books and Stationery</item>
        <item>Health and Wellness</item>
        <item>Toys and Games</item>
    </string-array>
</resources>