<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.ProductDataActivity">


    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="19dp"
        android:paddingVertical="14dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtAboutProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="66dp"
        android:text="@string/about_your_product"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="13dp"
        android:text="@string/product_desc"
        android:textColor="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAboutProduct" />


    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="56dp"
        android:text="@string/product_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <EditText
        android:id="@+id/editProductName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_product_name"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName" />


    <TextView
        android:id="@+id/txtProductLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/product_link"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProductName" />

    <EditText
        android:id="@+id/editProductLink"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_product_link"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductLink" />


    <TextView
        android:id="@+id/txtReach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/reach"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProductLink" />

    <EditText
        android:id="@+id/editReach"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_reach"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReach" />

    <TextView
        android:id="@+id/txtAdditionalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/additional"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editReach" />

    <EditText
        android:id="@+id/editAdditionalText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_text"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAdditionalText" />


    <TextView
        android:id="@+id/txtAdditionalDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/additional_description"
        android:textColor="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAdditionalText" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_btn"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>