<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.DealerDataActivity">


    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="19dp"
        android:paddingVertical="14dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtSteps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="66dp"
        android:text="@string/just_a_couple_of_steps"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="13dp"
        android:text="@string/dealer_description"
        android:textColor="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSteps" />


    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="56dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_name"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />


    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber" />


    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/country"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editCountry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/enter_country"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCountry" />


    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/shape_btn"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>