<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.TextActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="19dp"
        android:paddingVertical="14dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_text"
                app:layout_constraintBottom_toTopOf="@id/txtAddText"
                app:layout_constraintStart_toEndOf="@id/txtAddText" />

            <TextView
                android:id="@+id/txtAddText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editFirstText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/text_for_first_10_seconds"
            android:maxLength="30"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editSecondText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/text_for_10_to_20_seconds"
            android:maxLength="30"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/editThirdText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/text_for_20_to_30_seconds"
            android:maxLength="30"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/text_description"
            android:textColor="@color/secondary"
            android:textSize="12sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/shape_btn"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toTopOf="@id/txtSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="76dp"
        android:padding="22dp"
        android:text="@string/skip"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>