<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.LanguageActivity">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtArabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/arabic"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxSaveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:checked="false"
        android:text="@string/enable_important_notifications"
        android:textColor="@color/white"
        app:buttonIconTint="@color/white"
        app:buttonTint="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginTop="40dp"
        app:useMaterialThemeColors="true" />
</androidx.constraintlayout.widget.ConstraintLayout>